--- a/modules/main-application/src/main/resources/application-dev.properties
+++ b/modules/main-application/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://172.16.44.6:3306/rhsn?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/rfh?zeroDateTimeBehavior=convertToNull
 
 
 spring.datasource.username=root
