Altration patient list

--- a/modules/consultant/pom.xml
+++ b/modules/consultant/pom.xml
@@ -22,11 +22,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.ueniweb.swiftwaresolutions</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
