--- a/modules/patient/pom.xml
+++ b/modules/patient/pom.xml
@@ -38,5 +38,11 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.ueniweb.swiftwaresolutions</groupId>
+            <artifactId>consultant</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
