image upload function implemented

--- a/modules/main-application/src/main/resources/application-dev.properties
+++ b/modules/main-application/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/rfh?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://172.16.44.6:3306/rfh?zeroDateTimeBehavior=convertToNull
 
 
 spring.datasource.username=root
@@ -12,3 +12,7 @@ spring.jpa.show-sql= true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+server.port = 9090
+
+xrayImage.folder=D:\\office\\Application\\rhsn-upload-images
