--- a/modules/main-application/src/main/resources/application.properties
+++ b/modules/main-application/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.I
 # Access Token Configurations
 jwt.key.password=swiftware
 
-xrayImage.folder=\D:\\DB's\\rhsn_xray_image\\
+
+xrayImage.folder=D:\\office\\Application\\rhsn-upload-images
