--- a/modules/main-application/src/main/resources/application-prod.properties
+++ b/modules/main-application/src/main/resources/application-prod.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql= true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+
+xrayImage.folder=D:\\APPLICATION\\RFH\\HIS_rfh\\XrayImages
