image viewer completed

--- a/modules/main-application/src/main/resources/application.properties
+++ b/modules/main-application/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.I
 jwt.key.password=swiftware
 
 
-xrayImage.folder=D:\\office\\Application\\rhsn-upload-images
+xrayImage.folder=D:\\APPLICATION\\RFH\\HIS_rfh\\XrayImages
