--- a/modules/main-application/src/main/resources/application-dev.properties
+++ b/modules/main-application/src/main/resources/application-dev.properties
@@ -13,6 +13,6 @@ spring.jpa.show-sql= true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-server.port = 9090
+#server.port = 9090
 
 xrayImage.folder=D:\\office\\Application\\rhsn-upload-images
