surgery checkaList aditional input

--- a/modules/main-application/src/main/resources/application-dev.properties
+++ b/modules/main-application/src/main/resources/application-dev.properties
@@ -15,4 +15,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #server.port = 9090
 
-xrayImage.folder=D:\\office\\Application\\rhsn-upload-images
+xrayImage.folder=D:\\Application\\RFH\\HIS_rfh\\XrayImages
